# speakflow-api

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
app/: main.py
app/core/: config.py  dependencies.py  logging.py
app/infrastructure/: metrics.py
app/providers/: base.py  factory.py
app/providers/assemblyai/: provider.py
app/providers/aws_transcribe/: provider.py
app/providers/deepgram/: provider.py
app/providers/whisper_local/: provider.py
app/routers/v1/: health.py  websocket_stt.py
app/schemas/: audio.py  transcript.py
app/services/: session_manager.py  speech_service.py  transcript_processor.py
tests/integration/: test_websocket_concurrent.py
tests/unit/: test_providers.py  test_session_manager.py
